--- a/package.json
+++ b/package.json
@@ -4,22 +4,24 @@
   "description": "React Multi Select Component",
   "repository": {
     "type": "git",
-    "url": "https://github.com/khan/react-multi-select"
+    "url": "git+https://github.com/ElNath11/react-multi-select.git"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/@elnath11"
   },
   "license": "MIT",
   "scripts": {
-    "prepublish": ". ./.scripts/prepublish.sh",
+    "prepublish": "./scripts/prepublish.sh",
     "lint": "eslint src",
     "lintfix": "eslint src --fix",
-    "testonly": "mocha --require .scripts/mocha_runner src/**/tests/**/*.js",
+    "testonly": "mocha --require ./scripts/mocha_runner src/index.js",
     "test": "npm run lint && npm run testonly",
     "test-watch": "npm run testonly -- --watch --watch-extensions js",
     "storybook": "start-storybook -p 9010",
-    "publish-storybook": "bash .scripts/publish_storybook.sh",
-    "flow": "flow; test $? -eq 0 -o $? -eq 2"
+    "publish-storybook": "bash ./scripts/publish_storybook.sh",
+    "flow": "flow; test $? -eq 0 -o $? -eq 2",
+    "build": "tsc",
+    "deploy": "npm publish"
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
