--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "react-multi-select",
-  "version": "0.3.2",
+  "version": "0.3.4",
   "description": "React Multi Select Component",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ElNath11/react-multi-select.git"
+    "url": "https://github.com/ElNath11/react-multi-select.git"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/@elnath11"
@@ -19,11 +19,11 @@
     "test-watch": "npm run testonly -- --watch --watch-extensions js",
     "storybook": "start-storybook -p 9010",
     "publish-storybook": "bash ./scripts/publish_storybook.sh",
-    "flow": "flow; test $? -eq 0 -o $? -eq 2",
-    "build": "tsc",
-    "deploy": "npm publish"
+    "flow": "flow; test $? -eq 0 -o $? -eq 2"
   },
   "devDependencies": {
+    "@storybook/addons": "^3.4.11",
+    "@storybook/react": "^3.4.11",
     "babel-cli": "^6.14.0",
     "babel-core": "^6.14.0",
     "babel-eslint": "^8.2.2",
@@ -34,6 +34,7 @@
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-polyfill": "^6.13.0",
     "babel-preset-react-app": "^0.2.1",
+    "babel-runtime": "^6.26.0",
     "chai": "^3.5.0",
     "enzyme": "^2.2.0",
     "escope": "^3.6.0",
@@ -52,10 +53,7 @@
     "react-dom": "^15.3.2",
     "sinon": "^1.17.6",
     "uglify-js": "^2.8.14",
-    "webpack": "^2.2.1",
-    "@storybook/react": "^3.4.11",
-    "@storybook/addons": "^3.4.11",
-    "babel-runtime": "^6.26.0"
+    "webpack": "^2.2.1"
   },
   "peerDependencies": {
     "react": "^0.14.7 || ^15.0.0"
